force-app/main/default/objects/Individual_Achievement__c/Individual_Achievement__c.object-meta.xml
<CustomObject>
    <description>Achievement history for an individual.</description>
    <label>Individual Achievement</label>
    <nameField>
        <label>Achievement/Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Achievement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>