force-app/main/default/objects/Individual_Achievement__c/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ensures the linkage of the Individual Achievement record to its related Agreement Recognition. Used only in the Student Achievement Wizard.</description>
    <label>Agreement</label>
    <referenceTo>Agreement__c</referenceTo>
    <relationshipLabel>Individual Achievement</relationshipLabel>
    <relationshipName>Individual_Achievement</relationshipName>
    <type>Lookup</type>
</CustomField>