force-app/main/default/objects/Individual_Achievement__c/fields/Agreement_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Recognition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement Recognition</label>
    <referenceTo>Agreement_Recognition__c</referenceTo>
    <relationshipLabel>Individual Achievement</relationshipLabel>
    <relationshipName>Individual_Achievement</relationshipName>
    <type>Lookup</type>
</CustomField>