force-app/main/default/objects/Individual_Achievement__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Individual Achievement</relationshipLabel>
    <relationshipName>Individual_Achievement</relationshipName>
    <type>Lookup</type>
</CustomField>