force-app/main/default/objects/Individual_Achievement__c/fields/Department_Name__c.field-meta.xml
<CustomField>
    <description>The fallback text field for Department system field.</description>
    <fullName>Department_Name__c</fullName>
    <label>Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>