force-app/main/default/objects/Individual_Achievement__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Start_Date__c)),

  /* Calculate years and months using either End Date or TODAY() if blank */
  TEXT(
    FLOOR(
      (IF(ISBLANK(Graduation_Completion_Date__c), TODAY(), Graduation_Completion_Date__c) - Start_Date__c) / 365
    )
  ) &amp; &quot; yr&quot; &amp;
  IF(
    FLOOR(
      (IF(ISBLANK(Graduation_Completion_Date__c), TODAY(), Graduation_Completion_Date__c) - Start_Date__c) / 365
    ) &gt; 1,
    &quot;s&quot;,
    &quot;&quot;
  ) &amp; &quot; &quot; &amp;
  TEXT(
    FLOOR(
      MOD(
        (IF(ISBLANK(Graduation_Completion_Date__c), TODAY(), Graduation_Completion_Date__c) - Start_Date__c),
        365
      ) / 30
    )
  ) &amp; &quot; mo&quot; &amp;
  IF(
    FLOOR(
      MOD(
        (IF(ISBLANK(Graduation_Completion_Date__c), TODAY(), Graduation_Completion_Date__c) - Start_Date__c),
        365
      ) / 30
    ) &gt; 1,
    &quot;s&quot;,
    &quot;&quot;
  ) &amp;
  IF(ISBLANK(Graduation_Completion_Date__c), &quot; (Current)&quot;, &quot;&quot;),

  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>