force-app/main/default/objects/Individual_Achievement__c/fields/Educational_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution_Name__c</fullName>
    <label>Educational Institution/Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>