force-app/main/default/objects/Individual_Achievement__c/fields/Graduation_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Completion_Date__c</fullName>
    <description>The completion date (actual or expected).</description>
    <label>Graduation/Completion Date</label>
    <type>Date</type>
</CustomField>