force-app/main/default/objects/Individual_Achievement__c/fields/Recognition_Name__c.field-meta.xml
<CustomField>
    <description>The fallback text field for Agreement Recognition (Program) system field.</description>
    <fullName>Recognition_Name__c</fullName>
    <label>Recognition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>