force-app/main/default/objects/Individual_Achievement__c/fields/Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Verification_Comments__c</fullName>
    <label>Verification Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>