force-app/main/default/objects/Individual_Achievement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Educational_Institution_Name__c</columns>
    <columns>Academic_Level__c</columns>
    <columns>Completion_Status__c</columns>
    <columns>Verification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>