force-app/main/default/objects/Individual_Achievement__c/listViews/My_Achievement.listView-meta.xml
<ListView>
    <fullName>My_Achievement</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Educational_Institution_Name__c</columns>
    <columns>Academic_Level__c</columns>
    <columns>Completion_Status__c</columns>
    <columns>Verification_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Achievement</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>